this fixes an issue where sometimes we got an extra horizontal scrollbar because tooltips would need space to the right to be rendered
i think this will fix in all cases? as far as i can tell anyways...good enough *shrug*

can always swap it to render them to the left side for langauges and skills if it persists

also removed the extra margin under the table

and removed the left/right border for active rows, since that also added extra width

--- a/dm-screen.scss
+++ b/dm-screen.scss
@@ -198,7 +198,7 @@
 
         // simply tells us what the primary table is
         &.primary {
-            width: 99.8%;
+            // width: 99.8%;
         }
 
         // a sub table of some sort
@@ -285,6 +285,11 @@
         &.table {
             color: $gm_primary_font_color;
 
+            // override bootstrap stuff...
+            // make sure no space between this table and the rest of the 
+            // page content
+            margin-bottom: 0;
+
             // monospace font for most formatting
             td,th {
                 font-family: $font-family-monospace;
@@ -334,9 +339,13 @@
                 }
 
                 // used for when a row is "expanded" to show details
+                $border_thick: 2px;
+                $border_slim: 1px;
+                $border_color: $row_highlight_color;
                 &.active_row {
-                    border-width: 2px;
-                    border-color: $row_highlight_color;
+                    border-bottom-width: $border_thick;
+                    border-top-width: $border_thick;
+                    border-color: $border_color;
 
                     .activetitle {
                         padding-right: 0.2em;
@@ -346,6 +355,10 @@
 
                     td {
                         &.col_name {
+                            border-left-width: $border_slim;
+                            border-right-width: $border_thick;
+                            border-color: $border_color;
+
                             .name {
                                 color: $row_highlight_color;
                             }
@@ -355,6 +368,9 @@
                             }
                         }
                         &.col_skills {
+                            border-right-width: $border_slim;
+                            border-right-color: $border_color;
+
                             span {
                                 &.noprof {
                                     display: inline !important;
@@ -364,6 +380,10 @@
                                     transition: display 0.3s linear,visibility 0.3s linear,opacity 0.3s linear;
                                 }
                             }
+                        }
+                        &.col_languages {
+                            border-right-width: $border_slim;
+                            border-right-color: $border_color;
                         }
                     }
 
@@ -906,7 +926,7 @@
     }
     // background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba%28255%2C%20255%2C%20255%2C%201%29%22%20transform%3D%22rotate%28180%2018%206%29%22%20d%3D%22M2.658%2C0.000%20C-13.615%2C0.000%2050.938%2C0.000%2034.662%2C0.000%20C28.662%2C0.000%2023.035%2C12.002%2018.660%2C12.002%20C14.285%2C12.002%208.594%2C0.000%202.658%2C0.000%20Z%22%2F%3E%3C%2Fsvg%3E") no-repeat;
 
-    [role~="tooltip"][data-microtip-position="top"]::before {
+    [role~="tooltip"][data-microtip-position|="top"]::before {
         background: get-background-svg(svg-factory-top($tooltip-border-color));
     }
     [role~="tooltip"][data-microtip-position|="bottom"]::before {
